# project-workflow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REFERENCE-BORIS-WORKFLOW.md  REFERENCE-ECC-WORKFLOW.md  REFERENCE-LONG-RUNNING-AGENTS.md  WORKFLOW.md
.claude-plugin/: marketplace.json  plugin.json
agents/: agents-md-reviewer.md  codebase-explorer.md  decision-completeness-auditor.md  spec-quality-reviewer.md  spec-reviewer.md  system-architect.md  tech-researcher.md
commands/: module-dev.md  module-done.md  module-plan.md  project-plan.md
docs/: backlog.md  cross-tool-methodology.md  dev-deploy.md  gotchas.md  project-workflow-overview.drawio  quickstart.md  spec-driven.md  tooling.md  workflow.md
examples/full-stack-vue-fastapi/backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
examples/full-stack-vue-fastapi/backend/alembic/: env.py
examples/full-stack-vue-fastapi/backend/alembic/versions/: 2026_05_12_0001_initial.py
examples/full-stack-vue-fastapi/backend/src/: main.py
examples/full-stack-vue-fastapi/backend/src/auth/: deps.py  models.py  router.py  schemas.py  security.py  service.py
examples/full-stack-vue-fastapi/backend/src/core/: config.py  db.py  schemas.py
examples/full-stack-vue-fastapi/backend/src/todos/: models.py  router.py  schemas.py  service.py
examples/full-stack-vue-fastapi/backend/tests/: conftest.py
examples/full-stack-vue-fastapi/backend/tests/auth/: test_router.py
examples/full-stack-vue-fastapi/backend/tests/todos/: test_router.py
rules/: project-workflow.md
scripts/: build-plugin-packages.cjs  (+10 more)
(+283 files in other folders)
